# comicReader

./: .gitignore  CMakeLists.txt  compile_commands.json
src/: \  main.c
src/app/: app.h
src/archive/: archive.h
src/cache/: cache.h
src/common/: error.h  types.h
src/decoder/: decoder.h
src/platform/: platform.h
src/reader/: reader.h
src/renderer/: renderer.h
